Triggers/src/objects/Teach__c.object
<CustomObject>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>Teach</relationshipLabel>
        <relationshipName>Teach</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Maths</fullName>
                </value>
                <value>
                    <fullName>Science</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Teacher__c</fullName>
        <label>Teacher</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Teach</relationshipLabel>
        <relationshipName>Teach</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Teaches</label>
    <nameField>
        <displayFormat>TCS-{0000}</displayFormat>
        <label>Teach Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Teach</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>